--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,18 +2,23 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCIE = [
   {
-    date: "Actualmente...",
-    title: "Creador de Contenido − Twitch",
+    date: "Currently...",
+    title: "Sales representative - Claro.RD",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "Sales representative of telecommunications products in Claro, Dominican Republic."
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer  − Adevinta Spain",
+    date: "October 2023",
+    title: "Principal Frontend Engineer  − GERDOM",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "responsible for the development of the gerdom.com.do website.",
   },
+  {
+    date: "2021 - 2022",
+    title: "Freelancer web developer",
+    description:
+      "Independent web developer, with temporary clients for short projects.",
+  }
 ]
 ---
 
