--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,17 +5,14 @@
     class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
   >
     <span class="text-sm sm:text-center text-yellow-800/90 dark:text-yellow-200/90"
-      >© 2023 <a href="https://midu.dev/" class="hover:underline">midudev</a>.
-      Casi todos los derechos reservados
+      >© 2024 <a href="/" class="hover:underline">Leonibel SR</a>.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
+
       <li>
-        <a href="#" class="hover:underline me-4 md:me-6">Sobre mí</a>
-      </li>
-      <li>
-        <a href="#" class="hover:underline">Contacto</a>
+        <a href="mailto:leonibel.ramirez@gmail.com" target="_blank" class="hover:underline">leonibel.ramirez@gmail.com</a>
       </li>
     </ul>
   </div>
