--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,16 +19,13 @@
   >
     <a
       class="hover:bg-white/10 rounded-full px-3 transition"
-      href="#experiencia">Experiencia</a
+      href="#experiencia">Experience</a
     >
     <a class="hover:bg-white/10 rounded-full px-3 transition" href="#proyectos"
-      >Proyectos</a
+      >Projects</a
     >
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#sobre-mi"
-      >Sobre mí</a
-    >
-    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#contacto"
-      >Contacto</a
+    <a class="hover:bg-white/10 rounded-full px-3 transition" href="#me"
+      >About me</a
     >
   </nav>
 </header>
