--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,9 +25,8 @@ const { description, title } = Astro.props
 
   <body class="relative text-black dark:text-white">
     <div
-      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-neutral-100 dark:bg-neutral-950
-      bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
-      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full
+      bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_80%_50%_at_50%_0%,#000_70%,transparent_110%)]"
     >
     </div>
     <Header />
@@ -47,7 +46,7 @@ const { description, title } = Astro.props
   }
 
   body {
-    color: rgba(17, 17, 17, 0.9);
+    color: rgba(255, 255, 255, 0.9) !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -65,4 +64,11 @@ const { description, title } = Astro.props
       color: rgba(255, 255, 255, 0.9);
     }
   }
+
+  .title{
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,212,255,1) 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+ }
 </style>
