--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,66 +13,52 @@ import Projects from "../components/Projects.astro"
 ---
 
 <Layout
-  title="Porfolio de midudev - Desarrollador y Programador Web con 15 años de experiencia"
-  description="Contrata a midudev para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
+  title="Leonibel Segura - Web developer"
+  description="Web developer"
 >
   <main class="px-4">
-    <SectionContainer class="py-44 pb-32">
-      <img
-        class="rounded-full size-12 mb-4"
-        src="/midudev.webp"
-        alt="midudev photo"
-      />
+    <SectionContainer class="py-44 pb-32" id="me">
       <h1
         class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
       >
-        Hey, soy midudev <a
-          href="https://linkedin.com/in/midudev"
+      <span class="title">Hey, Im Leonibel Segura</span> <a
+          href="https://www.linkedin.com/in/leonibel-segura-ramirez-14a7392a9/"
           target="_blank"
           rel="noopener"
           class="flex justify-center items-center"
         >
-          <Badge>Disponible para trabajar</Badge>
+          <Badge>Available to work</Badge>
         </a>
       </h1>
       <h2
         class="text-xl lg:text-2xl text-balance max-w-[700px] text-black dark:text-white"
       >
-        <span>+15 años de experiencia.</span><span
-          class="text-yellow-800 dark:text-yellow-200"
-        >
-          Desarrollador Web y Creador de Contenido</span
-        >
-         .<span class="text-red-800 dark:text-red-200">
-          De Barcelona, España</span
-        >.
-        <span class="text-sky-800 dark:text-sky-200"
-          >Especializado en crear aplicaciones únicas.</span
-        >
+        <span>Web developer, with more than 3 years of experience. In areas such as backend, frontend and databases.</span>
       </h2>
 
       <nav class="flex gap-4 mt-8 flex-wrap">
-        <SocialPill href="https://linkedin.com/in/midudev">
+        <SocialPill href="https://www.linkedin.com/in/leonibel-segura-ramirez-14a7392a9/">
           <LinkedInIcon class="size-4 md:size-6" />
            LinkedIn
         </SocialPill>
-        <SocialPill href="https://github.com/midudev">
+        <SocialPill href="https://github.com/leonibeldev">
           <GitHubIcon class="size-4 md:size-6" />
            GitHub
         </SocialPill>
-        <SocialPill href="mailto:miduga@gmail.com">
+        <SocialPill href="mailto:leonibel.ramirez@gmail.com">
           <MailIcon class="size-4 md:size-6" />
-           miduga@gmail.com
+          leonibel.ramirez@gmail.com
         </SocialPill>
       </nav>
     </SectionContainer>
+    
 
     <SectionContainer id="experiencia">
       <h2
         class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80"
       >
         <Briefcase class="size-7" />
-         Experiencia laboral
+        Work experience
       </h2>
       <Experience />
     </SectionContainer>
@@ -82,7 +68,7 @@ import Projects from "../components/Projects.astro"
         class="text-3xl font-semibold mb-6 flex gap-x-3 items-center text-black/80 dark:text-white/80"
       >
         <CodeIcon class="size-7" />
-         Proyectos
+         Projects
       </h2>
       <Projects />
     </SectionContainer>
